...
    return Padding(
      padding: const EdgeInsets.all(16.0),
      child: Column(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          TextField(
            key: Key('Username'),
            controller: usernameController,
            style: AppTypography.body,
            decoration: InputDecoration(
              labelText: 'Username',
              labelStyle: AppTypography.body,
              focusedBorder: UnderlineInputBorder(
                borderSide: BorderSide(color: AppTheme.iris),
              ),
            ),
          ),
          SizedBox(height: 16),
          TextField(
            key: Key('Password'),
            controller: passwordController,
            style: AppTypography.body,
            decoration: InputDecoration(
              labelText: 'Password',
              labelStyle: AppTypography.body,
              focusedBorder: UnderlineInputBorder(
...
