...
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: Text('Profile'),
        actions: [
          IconButton(
            key: Key('themeToggleButton'),
            icon: Icon(
              Provider.of<ThemeManager>(context).toggle
                  ? Icons.light_mode
                  : Icons.nightlight_round,
            ),
            onPressed: () {
...
                // Implement logout functionality
                // For example, you can use Navigator to navigate to the login screen
                await Provider.of<AuthProvider>(context, listen: false)
                    .setLoginStatus(false);
                Navigator.of(context).pop();
              },
              child: Text('Logout'),
            ),
          ],
        ),
      ),
    );
  }
...
