...
                            ),
                          ],
                        ),
                      );
                    }
                  },
                  buttonText: 'Login',
                ),
                SizedBox(height: 20),
                TextButton(
                  key: Key('signupButton'),
                  onPressed: () {
                    Navigator.push(
                      context,
                      MaterialPageRoute(builder: (context) => SignupView()),
                    );
                  },
...
