...
                        ),
                      ],
                    ),
                  );
                }
              },
              buttonText: 'Sign Up',
            ),
          ),
        );
      },
    );
  }
...
